src/AST/ASTParser.java
package AST;
// $ANTLR 3.5.3 ./grammars/AST.g 2023-01-03 00:28:53

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ASTParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "COMMAND", "COMMANDS", 
		"CONS", "DIGIT", "ELSECOMMANDS", "EQUALS", "EXPRESSION", "EXPRESSIONS", 
		"EXPRS", "EXPR_BASE", "FOR", "FOREACH", "FUNCDEF", "FUNCTION", "FUNCTIONCALL", 
		"HEAD", "IF", "INPUT", "LIST", "NIL", "NOP", "OUTPUT", "ROOT", "SYMBOL", 
		"SYMBOL_LEX", "TAIL", "TOKENS", "VARIABLE", "VARIABLE_LEX", "VARS", "WHILE", 
		"WS", "' = '", "'%'", "'('", "')'", "','", "':'", "':='", "';'", "'cons '", 
		"'do'", "'else'", "'fi'", "'for'", "'foreach'", "'function'", "'hd '", 
		"'if'", "'in'", "'list '", "'nil'", "'nop'", "'od'", "'read'", "'then'", 
		"'tl '", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int ASSIGN=4;
	public static final int COMMAND=5;
	public static final int COMMANDS=6;
	public static final int CONS=7;
	public static final int DIGIT=8;
	public static final int ELSECOMMANDS=9;
	public static final int EQUALS=10;
	public static final int EXPRESSION=11;
	public static final int EXPRESSIONS=12;
	public static final int EXPRS=13;
	public static final int EXPR_BASE=14;
	public static final int FOR=15;
	public static final int FOREACH=16;
	public static final int FUNCDEF=17;
	public static final int FUNCTION=18;
	public static final int FUNCTIONCALL=19;
	public static final int HEAD=20;
	public static final int IF=21;
	public static final int INPUT=22;
	public static final int LIST=23;
	public static final int NIL=24;
	public static final int NOP=25;
	public static final int OUTPUT=26;
	public static final int ROOT=27;
	public static final int SYMBOL=28;
	public static final int SYMBOL_LEX=29;
	public static final int TAIL=30;
	public static final int TOKENS=31;
	public static final int VARIABLE=32;
	public static final int VARIABLE_LEX=33;
	public static final int VARS=34;
	public static final int WHILE=35;
	public static final int WS=36;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ASTParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ASTParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ASTParser.tokenNames; }
	@Override public String getGrammarFileName() { return "./grammars/AST.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// ./grammars/AST.g:40:1: program : ( WS )* ( function ( WS )* )+ -> ^( ROOT ( function )+ ) ;
	public final ASTParser.program_return program() throws RecognitionException {
		ASTParser.program_return retval = new ASTParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WS1=null;
		Token WS3=null;
		ParserRuleReturnScope function2 =null;

		Object WS1_tree=null;
		Object WS3_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");

		try {
			// ./grammars/AST.g:40:8: ( ( WS )* ( function ( WS )* )+ -> ^( ROOT ( function )+ ) )
			// ./grammars/AST.g:40:10: ( WS )* ( function ( WS )* )+
			{
			// ./grammars/AST.g:40:10: ( WS )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==WS) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ./grammars/AST.g:40:10: WS
					{
					WS1=(Token)match(input,WS,FOLLOW_WS_in_program144);  
					stream_WS.add(WS1);

					}
					break;

				default :
					break loop1;
				}
			}

			// ./grammars/AST.g:40:14: ( function ( WS )* )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==51) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// ./grammars/AST.g:40:15: function ( WS )*
					{
					pushFollow(FOLLOW_function_in_program148);
					function2=function();
					state._fsp--;

					stream_function.add(function2.getTree());
					// ./grammars/AST.g:40:24: ( WS )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==WS) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// ./grammars/AST.g:40:24: WS
							{
							WS3=(Token)match(input,WS,FOLLOW_WS_in_program150);  
							stream_WS.add(WS3);

							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}


			// AST REWRITE
			// elements: function
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 40:30: -> ^( ROOT ( function )+ )
			{
				// ./grammars/AST.g:40:33: ^( ROOT ( function )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
				if ( !(stream_function.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_function.hasNext() ) {
					adaptor.addChild(root_1, stream_function.nextTree());
				}
				stream_function.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// ./grammars/AST.g:42:1: function : 'function' WS SYMBOL_LEX ( WS )? ':' WS definition -> ^( FUNCTION ^( SYMBOL_LEX definition ) ) ;
	public final ASTParser.function_return function() throws RecognitionException {
		ASTParser.function_return retval = new ASTParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal4=null;
		Token WS5=null;
		Token SYMBOL_LEX6=null;
		Token WS7=null;
		Token char_literal8=null;
		Token WS9=null;
		ParserRuleReturnScope definition10 =null;

		Object string_literal4_tree=null;
		Object WS5_tree=null;
		Object SYMBOL_LEX6_tree=null;
		Object WS7_tree=null;
		Object char_literal8_tree=null;
		Object WS9_tree=null;
		RewriteRuleTokenStream stream_SYMBOL_LEX=new RewriteRuleTokenStream(adaptor,"token SYMBOL_LEX");
		RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// ./grammars/AST.g:42:9: ( 'function' WS SYMBOL_LEX ( WS )? ':' WS definition -> ^( FUNCTION ^( SYMBOL_LEX definition ) ) )
			// ./grammars/AST.g:42:11: 'function' WS SYMBOL_LEX ( WS )? ':' WS definition
			{
			string_literal4=(Token)match(input,51,FOLLOW_51_in_function169);  
			stream_51.add(string_literal4);

			WS5=(Token)match(input,WS,FOLLOW_WS_in_function171);  
			stream_WS.add(WS5);

			SYMBOL_LEX6=(Token)match(input,SYMBOL_LEX,FOLLOW_SYMBOL_LEX_in_function173);  
			stream_SYMBOL_LEX.add(SYMBOL_LEX6);

			// ./grammars/AST.g:42:36: ( WS )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==WS) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// ./grammars/AST.g:42:36: WS
					{
					WS7=(Token)match(input,WS,FOLLOW_WS_in_function175);  
					stream_WS.add(WS7);

					}
					break;

			}

			char_literal8=(Token)match(input,42,FOLLOW_42_in_function178);  
			stream_42.add(char_literal8);

			WS9=(Token)match(input,WS,FOLLOW_WS_in_function180);  
			stream_WS.add(WS9);

			pushFollow(FOLLOW_definition_in_function182);
			definition10=definition();
			state._fsp--;

			stream_definition.add(definition10.getTree());

			// AST REWRITE
			// elements: SYMBOL_LEX, definition
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 42:57: -> ^( FUNCTION ^( SYMBOL_LEX definition ) )
			{
				// ./grammars/AST.g:42:60: ^( FUNCTION ^( SYMBOL_LEX definition ) )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTION, "FUNCTION"), root_1);
				// ./grammars/AST.g:42:71: ^( SYMBOL_LEX definition )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot(stream_SYMBOL_LEX.nextNode(), root_2);
				adaptor.addChild(root_2, stream_definition.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// ./grammars/AST.g:44:1: definition : 'read' WS ( input WS )? '%' WS commands WS '%' WS 'write' output -> ^( FUNCDEF ( input )? ^( COMMANDS commands ) ^( OUTPUT output ) ) ;
	public final ASTParser.definition_return definition() throws RecognitionException {
		ASTParser.definition_return retval = new ASTParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal11=null;
		Token WS12=null;
		Token WS14=null;
		Token char_literal15=null;
		Token WS16=null;
		Token WS18=null;
		Token char_literal19=null;
		Token WS20=null;
		Token string_literal21=null;
		ParserRuleReturnScope input13 =null;
		ParserRuleReturnScope commands17 =null;
		ParserRuleReturnScope output22 =null;

		Object string_literal11_tree=null;
		Object WS12_tree=null;
		Object WS14_tree=null;
		Object char_literal15_tree=null;
		Object WS16_tree=null;
		Object WS18_tree=null;
		Object char_literal19_tree=null;
		Object WS20_tree=null;
		Object string_literal21_tree=null;
		RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
		RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// ./grammars/AST.g:44:11: ( 'read' WS ( input WS )? '%' WS commands WS '%' WS 'write' output -> ^( FUNCDEF ( input )? ^( COMMANDS commands ) ^( OUTPUT output ) ) )
			// ./grammars/AST.g:45:2: 'read' WS ( input WS )? '%' WS commands WS '%' WS 'write' output
			{
			string_literal11=(Token)match(input,59,FOLLOW_59_in_definition201);  
			stream_59.add(string_literal11);

			WS12=(Token)match(input,WS,FOLLOW_WS_in_definition203);  
			stream_WS.add(WS12);

			// ./grammars/AST.g:45:12: ( input WS )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==VARIABLE_LEX||LA5_0==WS) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// ./grammars/AST.g:45:13: input WS
					{
					pushFollow(FOLLOW_input_in_definition206);
					input13=input();
					state._fsp--;

					stream_input.add(input13.getTree());
					WS14=(Token)match(input,WS,FOLLOW_WS_in_definition208);  
					stream_WS.add(WS14);

					}
					break;

			}

			char_literal15=(Token)match(input,38,FOLLOW_38_in_definition212);  
			stream_38.add(char_literal15);

			WS16=(Token)match(input,WS,FOLLOW_WS_in_definition214);  
			stream_WS.add(WS16);

			pushFollow(FOLLOW_commands_in_definition216);
			commands17=commands();
			state._fsp--;

			stream_commands.add(commands17.getTree());
			WS18=(Token)match(input,WS,FOLLOW_WS_in_definition218);  
			stream_WS.add(WS18);

			char_literal19=(Token)match(input,38,FOLLOW_38_in_definition220);  
			stream_38.add(char_literal19);

			WS20=(Token)match(input,WS,FOLLOW_WS_in_definition222);  
			stream_WS.add(WS20);

			string_literal21=(Token)match(input,63,FOLLOW_63_in_definition224);  
			stream_63.add(string_literal21);

			pushFollow(FOLLOW_output_in_definition226);
			output22=output();
			state._fsp--;

			stream_output.add(output22.getTree());

			// AST REWRITE
			// elements: commands, input, output
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 45:65: -> ^( FUNCDEF ( input )? ^( COMMANDS commands ) ^( OUTPUT output ) )
			{
				// ./grammars/AST.g:45:68: ^( FUNCDEF ( input )? ^( COMMANDS commands ) ^( OUTPUT output ) )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCDEF, "FUNCDEF"), root_1);
				// ./grammars/AST.g:45:78: ( input )?
				if ( stream_input.hasNext() ) {
					adaptor.addChild(root_1, stream_input.nextTree());
				}
				stream_input.reset();

				// ./grammars/AST.g:45:85: ^( COMMANDS commands )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMANDS, "COMMANDS"), root_2);
				adaptor.addChild(root_2, stream_commands.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				// ./grammars/AST.g:45:106: ^( OUTPUT output )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUT, "OUTPUT"), root_2);
				adaptor.addChild(root_2, stream_output.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "definition"


	public static class input_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// ./grammars/AST.g:47:1: input : ( inputsub )? -> ^( INPUT ( inputsub )? ) ;
	public final ASTParser.input_return input() throws RecognitionException {
		ASTParser.input_return retval = new ASTParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputsub23 =null;

		RewriteRuleSubtreeStream stream_inputsub=new RewriteRuleSubtreeStream(adaptor,"rule inputsub");

		try {
			// ./grammars/AST.g:47:6: ( ( inputsub )? -> ^( INPUT ( inputsub )? ) )
			// ./grammars/AST.g:47:8: ( inputsub )?
			{
			// ./grammars/AST.g:47:8: ( inputsub )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==WS) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==VARIABLE_LEX) ) {
					alt6=1;
				}
			}
			else if ( (LA6_0==VARIABLE_LEX) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// ./grammars/AST.g:47:8: inputsub
					{
					pushFollow(FOLLOW_inputsub_in_input255);
					inputsub23=inputsub();
					state._fsp--;

					stream_inputsub.add(inputsub23.getTree());
					}
					break;

			}


			// AST REWRITE
			// elements: inputsub
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 47:18: -> ^( INPUT ( inputsub )? )
			{
				// ./grammars/AST.g:47:21: ^( INPUT ( inputsub )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUT, "INPUT"), root_1);
				// ./grammars/AST.g:47:29: ( inputsub )?
				if ( stream_inputsub.hasNext() ) {
					adaptor.addChild(root_1, stream_inputsub.nextTree());
				}
				stream_inputsub.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class inputsub_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "inputsub"
	// ./grammars/AST.g:49:1: inputsub : ( ( ( WS )? VARIABLE_LEX ( WS )? ',' inputsub ) -> VARIABLE_LEX inputsub | ( WS )? VARIABLE_LEX -> VARIABLE_LEX );
	public final ASTParser.inputsub_return inputsub() throws RecognitionException {
		ASTParser.inputsub_return retval = new ASTParser.inputsub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WS24=null;
		Token VARIABLE_LEX25=null;
		Token WS26=null;
		Token char_literal27=null;
		Token WS29=null;
		Token VARIABLE_LEX30=null;
		ParserRuleReturnScope inputsub28 =null;

		Object WS24_tree=null;
		Object VARIABLE_LEX25_tree=null;
		Object WS26_tree=null;
		Object char_literal27_tree=null;
		Object WS29_tree=null;
		Object VARIABLE_LEX30_tree=null;
		RewriteRuleTokenStream stream_VARIABLE_LEX=new RewriteRuleTokenStream(adaptor,"token VARIABLE_LEX");
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
		RewriteRuleSubtreeStream stream_inputsub=new RewriteRuleSubtreeStream(adaptor,"rule inputsub");

		try {
			// ./grammars/AST.g:49:9: ( ( ( WS )? VARIABLE_LEX ( WS )? ',' inputsub ) -> VARIABLE_LEX inputsub | ( WS )? VARIABLE_LEX -> VARIABLE_LEX )
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==WS) ) {
				int LA10_1 = input.LA(2);
				if ( (LA10_1==VARIABLE_LEX) ) {
					int LA10_2 = input.LA(3);
					if ( (LA10_2==WS) ) {
						int LA10_3 = input.LA(4);
						if ( (LA10_3==41) ) {
							alt10=1;
						}
						else if ( (LA10_3==38) ) {
							alt10=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 10, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}
					else if ( (LA10_2==41) ) {
						alt10=1;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 10, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 10, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA10_0==VARIABLE_LEX) ) {
				int LA10_2 = input.LA(2);
				if ( (LA10_2==WS) ) {
					int LA10_3 = input.LA(3);
					if ( (LA10_3==41) ) {
						alt10=1;
					}
					else if ( (LA10_3==38) ) {
						alt10=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 10, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA10_2==41) ) {
					alt10=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 10, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}

			switch (alt10) {
				case 1 :
					// ./grammars/AST.g:49:11: ( ( WS )? VARIABLE_LEX ( WS )? ',' inputsub )
					{
					// ./grammars/AST.g:49:11: ( ( WS )? VARIABLE_LEX ( WS )? ',' inputsub )
					// ./grammars/AST.g:49:12: ( WS )? VARIABLE_LEX ( WS )? ',' inputsub
					{
					// ./grammars/AST.g:49:12: ( WS )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==WS) ) {
						alt7=1;
					}
					switch (alt7) {
						case 1 :
							// ./grammars/AST.g:49:12: WS
							{
							WS24=(Token)match(input,WS,FOLLOW_WS_in_inputsub273);  
							stream_WS.add(WS24);

							}
							break;

					}

					VARIABLE_LEX25=(Token)match(input,VARIABLE_LEX,FOLLOW_VARIABLE_LEX_in_inputsub276);  
					stream_VARIABLE_LEX.add(VARIABLE_LEX25);

					// ./grammars/AST.g:49:29: ( WS )?
					int alt8=2;
					int LA8_0 = input.LA(1);
					if ( (LA8_0==WS) ) {
						alt8=1;
					}
					switch (alt8) {
						case 1 :
							// ./grammars/AST.g:49:29: WS
							{
							WS26=(Token)match(input,WS,FOLLOW_WS_in_inputsub278);  
							stream_WS.add(WS26);

							}
							break;

					}

					char_literal27=(Token)match(input,41,FOLLOW_41_in_inputsub281);  
					stream_41.add(char_literal27);

					pushFollow(FOLLOW_inputsub_in_inputsub283);
					inputsub28=inputsub();
					state._fsp--;

					stream_inputsub.add(inputsub28.getTree());
					}


					// AST REWRITE
					// elements: inputsub, VARIABLE_LEX
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 49:47: -> VARIABLE_LEX inputsub
					{
						adaptor.addChild(root_0, stream_VARIABLE_LEX.nextNode());
						adaptor.addChild(root_0, stream_inputsub.nextTree());
					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// ./grammars/AST.g:49:74: ( WS )? VARIABLE_LEX
					{
					// ./grammars/AST.g:49:74: ( WS )?
					int alt9=2;
					int LA9_0 = input.LA(1);
					if ( (LA9_0==WS) ) {
						alt9=1;
					}
					switch (alt9) {
						case 1 :
							// ./grammars/AST.g:49:74: WS
							{
							WS29=(Token)match(input,WS,FOLLOW_WS_in_inputsub294);  
							stream_WS.add(WS29);

							}
							break;

					}

					VARIABLE_LEX30=(Token)match(input,VARIABLE_LEX,FOLLOW_VARIABLE_LEX_in_inputsub297);  
					stream_VARIABLE_LEX.add(VARIABLE_LEX30);


					// AST REWRITE
					// elements: VARIABLE_LEX
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 49:91: -> VARIABLE_LEX
					{
						adaptor.addChild(root_0, stream_VARIABLE_LEX.nextNode());
					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
